20231204 finish QCGNN training | FCGNN -> QCGNN

--- a/g_main.ipynb
+++ b/g_main.ipynb
@@ -72,19 +72,21 @@
     "# config[\"project\"]  = \"g_main\"\n",
     "# config[\"suffix\"]   = \"\"\n",
     "# config[\"rnd_seed\"] = int(input(\"Set random seed = \"))\n",
-    "# config[\"qdevice\"]  = \"default.qubit\"\n",
-    "# config[\"qbackend\"] = \"\"\n",
+    "# config[\"qdevice\"]     = \"default.qubit\"\n",
+    "# config[\"qbackend\"]    = \"\"\n",
+    "# config[\"diff_method\"] = \"best\"\n",
     "\n",
     "# test\n",
-    "# config[\"time\"]     = \"20231123\"\n",
-    "# config[\"device\"]   = \"4090\"\n",
-    "# config[\"project\"]  = \"g_main\"\n",
-    "# config[\"suffix\"]   = \"qml_qiskit_enc\"\n",
-    "# config[\"rnd_seed\"] = 0\n",
-    "# config[\"qdevice\"]  = \"default.qubit\"\n",
-    "# config[\"qdevice\"]  = \"qiskit.ibmq\"\n",
-    "# config[\"qbackend\"] = \"ibmq_qasm_simulator\"\n",
-    "# config[\"use_qiskit_enc\"] = True\n",
+    "config[\"time\"]     = \"20231123\"\n",
+    "config[\"device\"]   = \"4090\"\n",
+    "config[\"project\"]  = \"g_main\"\n",
+    "config[\"suffix\"]   = \"qml_psr\"\n",
+    "config[\"rnd_seed\"] = 0\n",
+    "config[\"qdevice\"]     = \"default.qubit\"\n",
+    "# config[\"qdevice\"]     = \"qiskit.aer\"\n",
+    "config[\"qbackend\"]    = None\n",
+    "config[\"diff_method\"] = \"parameter-shift\"\n",
+    "config[\"use_qiskit_enc\"] = True\n",
     "\n",
     "# # parser (if needed)\n",
     "# parser = argparse.ArgumentParser(description='argparse for slurm')\n",
@@ -234,8 +236,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class QuantumRotFCGNN(nn.Module):\n",
-    "    def __init__(self, num_ir_qubits, num_nr_qubits, num_layers, num_reupload, device=\"default.qubit\", backend=\"ibmq_qasm_simulator\", **kwargs):\n",
+    "class QuantumRotQCGNN(nn.Module):\n",
+    "    def __init__(self, num_ir_qubits, num_nr_qubits, num_layers, num_reupload, device=\"default.qubit\", backend=\"ibmq_qasm_simulator\", diff_method=\"best\", **kwargs):\n",
     "        super().__init__()\n",
     "        # rotation encoding on pennylane simulator\n",
     "        def qml_encoding(_input, control_values):\n",
@@ -280,9 +282,9 @@
     "\n",
     "        # constructing QCGNN like a MPGNN\n",
     "        if \"qiskit\" in device or config[\"use_qiskit_enc\"]:\n",
-    "            self.phi = module_model.QCGNN(num_ir_qubits, num_nr_qubits, num_layers, num_reupload, ctrl_enc=qiskit_encoding, device=device, backend=backend)\n",
+    "            self.phi = module_model.QCGNN(num_ir_qubits, num_nr_qubits, num_layers, num_reupload, ctrl_enc=qiskit_encoding, device=device, backend=backend, diff_method=diff_method)\n",
     "        else:\n",
-    "            self.phi = module_model.QCGNN(num_ir_qubits, num_nr_qubits, num_layers, num_reupload, ctrl_enc=qml_encoding, device=device)\n",
+    "            self.phi = module_model.QCGNN(num_ir_qubits, num_nr_qubits, num_layers, num_reupload, ctrl_enc=qml_encoding, device=device, diff_method=diff_method)\n",
     "        self.mlp = module_model.ClassicalMLP(in_channel=num_nr_qubits, out_channel=1, hidden_channel=0, num_layers=0)\n",
     "    \n",
     "    def forward(self, x):\n",
@@ -364,7 +366,7 @@
     "sig_fatjet_events = module_data.FatJetEvents(channel=data_config[\"sig\"], cut_pt=data_config[\"cut\"], subjet_radius=data_config[\"subjet_radius\"], num_pt_ptcs=data_config[\"num_pt_ptcs\"])\n",
     "bkg_fatjet_events = module_data.FatJetEvents(channel=data_config[\"bkg\"], cut_pt=data_config[\"cut\"], subjet_radius=data_config[\"subjet_radius\"], num_pt_ptcs=data_config[\"num_pt_ptcs\"])\n",
     "\n",
-    "for rnd_seed in range(3):\n",
+    "for rnd_seed in range(1):\n",
     "    config[\"rnd_seed\"] = rnd_seed\n",
     "    L.seed_everything(config[\"rnd_seed\"])\n",
     "    sig_events  = sig_fatjet_events.generate_uniform_pt_events(bin=data_config[\"bin\"], num_bin_data=data_config[\"num_bin_data\"])\n",
@@ -387,7 +389,7 @@
     "    gl, gr        = 1, 3\n",
     "    model_suffix  = f\"qidx{qidx}_qnn{qnn}_gl{gl}_gr{gr}\"\n",
     "    model_config  = {\"gnn_idx_qubits\":qidx, \"gnn_nn_qubits\":qnn, \"gnn_layers\":gl, \"gnn_reupload\":gr, \"lr\":1E-2, \"model_suffix\":model_suffix}\n",
-    "    model         = QuantumRotFCGNN(num_ir_qubits=qidx, num_nr_qubits=qnn, num_layers=gl, num_reupload=gr, device=config[\"qdevice\"], backend=config[\"qbackend\"])\n",
+    "    model         = QuantumRotQCGNN(num_ir_qubits=qidx, num_nr_qubits=qnn, num_layers=gl, num_reupload=gr, device=config[\"qdevice\"], backend=config[\"qbackend\"], diff_method=config[\"diff_method\"])\n",
     "    train(model, model_config, data_module, data_config, graph=False, suffix=config[\"suffix\"])"
    ]
   }
