--- a/wandb_api.ipynb
+++ b/wandb_api.ipynb
@@ -13,19 +13,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import wandb\n",
+    "# import wandb\n",
     "\n",
-    "api     = wandb.Api()\n",
-    "date    = \"20231122\"\n",
-    "suffix  = \"\"\n",
-    "project = \"g_main\"\n",
+    "# api     = wandb.Api()\n",
+    "# date    = \"20231122\"\n",
+    "# suffix  = \"\"\n",
+    "# project = \"g_main\"\n",
     "\n",
-    "for run in api.runs(f\"ntuyianchen/{project}\"):\n",
-    "    if date in run.id and suffix in run.id:\n",
-    "        print(run.id)\n",
-    "        # run.delete()\n",
-    "    # elif run.id is None:\n",
-    "    #     print(run.id)"
+    "# for run in api.runs(f\"ntuyianchen/{project}\"):\n",
+    "#     if date in run.id and suffix in run.id:\n",
+    "#         print(run.id)\n",
+    "#         # run.delete()\n",
+    "#     # elif run.id is None:\n",
+    "#     #     print(run.id)"
    ]
   },
   {
@@ -41,23 +41,190 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import wandb\n",
+    "\n",
+    "# api     = wandb.Api()\n",
+    "# date    = \"\"\n",
+    "# suffix  = \"\"\n",
+    "# project = \"g_eflow_QFCGNN\"\n",
+    "\n",
+    "# for run in api.runs(f\"ntuyianchen/{project}\"):\n",
+    "#     if run.state == \"finished\":\n",
+    "#         if \"subjet_radius\" in run.config.keys() and run.config[\"subjet_radius\"] == None:\n",
+    "#             print(run.id)\n",
+    "#             run.config[\"subjet_radius\"] = 0\n",
+    "#             run.update()\n",
+    "#         if \"num_pt_ptcs\" in run.config.keys() and run.config[\"num_pt_ptcs\"] == None:\n",
+    "#             print(run.id)\n",
+    "#             run.config[\"num_pt_ptcs\"] = \"Full\"\n",
+    "#             run.update()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Modify name and values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "----------------------------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
     "import wandb\n",
     "\n",
     "api     = wandb.Api()\n",
     "date    = \"\"\n",
     "suffix  = \"\"\n",
-    "project = \"g_eflow_QFCGNN\"\n",
+    "project = \"g_main\"\n",
     "\n",
     "for run in api.runs(f\"ntuyianchen/{project}\"):\n",
+    "    print(100*\"-\")\n",
     "    if run.state == \"finished\":\n",
-    "        if \"subjet_radius\" in run.config.keys() and run.config[\"subjet_radius\"] == None:\n",
-    "            print(run.id)\n",
-    "            run.config[\"subjet_radius\"] = 0\n",
+    "        # FCGNN -> QCGNN\n",
+    "        if \"QuantumRotFCGNN\" in run.config[\"id\"]:\n",
+    "            run.id   = run.id.replace(\"QuantumRotFCGNN\", \"QuantumRotQCGNN\")\n",
+    "            run.name = run.name.replace(\"QuantumRotFCGNN\", \"QuantumRotQCGNN\")\n",
+    "            run.config[\"id\"]         = run.config[\"id\"].replace(\"QuantumRotFCGNN\", \"QuantumRotQCGNN\")\n",
+    "            run.config[\"name\"]       = run.config[\"name\"].replace(\"QuantumRotFCGNN\", \"QuantumRotQCGNN\")\n",
+    "            run.config[\"group_rnd\"]  = run.config[\"group_rnd\"].replace(\"QuantumRotFCGNN\", \"QuantumRotQCGNN\")\n",
+    "            run.config[\"model_name\"] = \"QuantumRotQCGNN\"\n",
     "            run.update()\n",
-    "        if \"num_pt_ptcs\" in run.config.keys() and run.config[\"num_pt_ptcs\"] == None:\n",
     "            print(run.id)\n",
-    "            run.config[\"num_pt_ptcs\"] = \"Full\"\n",
-    "            run.update()"
+    "        # Update null values of sig and bkg\n",
+    "        if \"sig\" not in run.config.keys():\n",
+    "            if \"BB-QCD\" in run.id:\n",
+    "                run.config[\"sig\"] = \"VzToZhToVevebb\"\n",
+    "            elif \"TT-QCD\" in run.id:\n",
+    "                run.config[\"sig\"] = \"VzToTt\"\n",
+    "            run.config[\"bkg\"] = \"VzToQCD\"\n",
+    "            run.update()\n",
+    "            print(run.id)"
    ]
   }
  ],
